--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -45,6 +45,7 @@
 
 
 /* Global Css */
+/* Hide the main content initially */
 * {
     box-sizing: border-box;
     margin: 0;
@@ -270,6 +271,13 @@ img {
     display: none;
 }
 
+div#loader {
+    font-size: 40px;
+    margin-top: 30px;
+    font-weight: bold;
+    font-family: 'K2D';
+}
+
 .preloader {
     position: fixed;
     left: 0;
@@ -283,6 +291,7 @@ img {
     align-items: center;
     justify-content: center;
     padding: 30px;
+    flex-direction: column;
 }
 
 .preloader .preloader_inner {
@@ -308,6 +317,21 @@ img {
     width: 100%;
     margin: 0 auto;
     padding: 0 30px;
+}
+
+#progress-bar {
+    width: 100%;
+    height: 10px;
+    background-color: #444;
+    border-radius: 5px;
+    margin-top: 20px;
+}
+
+#progress {
+    height: 100%;
+    width: 0;
+    background-color: #00F0FF;
+    border-radius: 5px;
 }
 
 /* Header Css */
