--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -325,6 +325,7 @@ div#loader {
     background-color: #444;
     border-radius: 5px;
     margin-top: 20px;
+    transition: all 0.3s;
 }
 
 #progress {
@@ -332,6 +333,7 @@ div#loader {
     width: 0;
     background-color: #00F0FF;
     border-radius: 5px;
+    transition: all 0.3s;
 }
 
 /* Header Css */
